@@ -3,6 +3,7 @@ package uk.gov.hmcts.reform.fpl.model.order;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
+import java.util.Collections;
 import java.util.List;
 
 @Getter
@@ -89,7 +90,20 @@ public enum OrderQuestionBlock {
     ORDER_TO_AMEND("orderToAmend", OrderSection.AMEND_DOWNLOAD,
         List.of("manageOrdersOrderToAmend")),
     UPLOAD_AMENDED_ORDER("uploadAmendedOrder", OrderSection.AMEND_DOWNLOAD,
-        List.of("manageOrdersAmendedOrder"));
+        List.of("manageOrdersAmendedOrder")),
+    EDUCATION_SUPERVISION("manageOrdersEducationSupervision", OrderSection.ORDER_DETAILS,
+        List.of("manageOrdersLeaName","manageOrdersEndDateWithEducationAge")),
+    VARY_OR_EXTEND_SUPERVISION_ORDER("manageOrdersVaryOrExtendSupervisionOrder", OrderSection.ORDER_DETAILS,
+        List.of("manageOrdersSupervisionOrderType", "manageOrdersC35aOrderExists",
+            "manageOrdersC35aOrderDoesntExistMessage", "manageOrdersSupervisionOrderVariationHeading",
+            "manageOrdersSupervisionOrderExtensionHeading", "manageOrdersSupervisionOrderCourtDirection",
+            "manageOrdersSupervisionOrderApprovalDate", "manageOrdersSupervisionOrderEndDate")),
+    REFUSE_CONTACT_ORDER("refuseContactQuestions", OrderSection.ORDER_DETAILS, Collections.emptyList()),
+    RESPONDENTS_REFUSED("respondentsRefused", OrderSection.ORDER_DETAILS,
+                       List.of("respondentsRefused_label", "respondentsRefusedSelector")),
+    ORDER_PLACED_CHILD_IN_CUSTODY("orderPlacedChildInCustody", OrderSection.ORDER_DETAILS,
+        List.of("manageOrdersPlacedUnderOrder", "manageOrdersOrderCreatedDate", "manageOrdersActionsPermitted",
+            "manageOrdersIsExParte"));
 
     private final String showHideField;
     private final OrderSection section;
